2023-01-05  Markus Gans  <guru.mail@muenster.de>
	* Bugfix for broken scrollbar behavior in FScrollView widget

2023-01-04  Markus Gans  <guru.mail@muenster.de>
	* FObject now supports reverse iterators
	* Small improvement of the display speed

2023-01-03  Markus Gans  <guru.mail@muenster.de>
	* The way how a widget gets the focus has been changed. It is now 
	  a single step that includes sending focus events

2022-12-26  Markus Gans  <guru.mail@muenster.de>
	* Incomplete mouse sequences are no longer checked by 
	  the keyboard parser
	* Fixing the conflict between NOT_SET and FKey::Incomplete

2022-12-24  Markus Gans  <guru.mail@muenster.de>
	* Widget flags are now organized in a hierarchical structure

2022-12-14  Markus Gans  <guru.mail@muenster.de>
	* Simplifies the request of the encoding

2022-12-08  Markus Gans  <guru.mail@muenster.de>
	* Fixed the changes on printing of the last full-width character 
	  in a virtual window
	* Bugfix: getPrevCharLength() crashed on strings with a leading space

2022-12-06  Markus Gans  <guru.mail@muenster.de>
	* FLineEdit can set the alignment (left, center, or right) for 
	  the content of the entry

2022-12-04  Markus Gans  <guru.mail@muenster.de>
	* Virtual windows now use C++ smart pointers for data storage

2022-11-26  Markus Gans  <guru.mail@muenster.de>
	* Removed the deprecated method isNull() in FString

2022-11-25  Markus Gans  <guru.mail@muenster.de>
	* New helper function to update the widget text of the status bar

2022-11-20  Markus Gans  <guru.mail@muenster.de>
	* FTimer specialization for FObject in FObjectTimer

2022-11-12  Markus Gans  <guru.mail@muenster.de>
	* Direct access to a character in a print area via coordinates

2022-11-05  Markus Gans  <guru.mail@muenster.de>
	* The new class FTimer now contains all timer methods

2022-10-28  Markus Gans  <guru.mail@muenster.de>
	* Generalize text reading from terminal

2022-10-23  Markus Gans  <guru.mail@muenster.de>